Refactor production code & remove unnecessary classes